fix: increase font size for generalRules_list_item for improved readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -758,7 +758,7 @@ body {
 
   .generalRules_list_item p {
     color: var(--main-color1);
-    font-size: 12px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
